# f2a

./: .gitignore  ADVANCED_ANALYSIS_PLAN.md  Cargo.toml  ENHANCEMENT_PLAN.md  PLAN.md  README.md  lerobot_test_library.py  lerobot_test_local.py  pyproject.toml  test_e2e.py
.github/workflows/: ci.yml  pages.yml  publish.yml
examples/: huggingface_demo.py  quickstart.py
f2a/core/: analyzer.py  config.py
f2a/report/: i18n.py
f2a/stats/: __init__.py  statistical_tests.py
f2a/viz/: __init__.py
git_action/tests/: conftest.py  test_descriptive.py  test_loader.py  test_report.py  test_viz.py
python/f2a/: __init__.py  api.py
python/f2a/report/: __init__.py  generator.py  i18n.py
python/f2a/viz/: __init__.py  plots.py  theme.py
sample/: lerobot_roboturk_20260317_090024_report.html
src/: lib.rs
src/core/: analyzer.rs  config.rs  loader.rs  mod.rs  preprocessor.rs  schema.rs
src/f2a/: __init__.py
src/f2a/core/: __init__.py  analyzer.py  config.py  loader.py  schema.py
src/f2a/report/: __init__.py  generator.py  i18n.py
src/f2a/stats/: __init__.py  correlation.py  descriptive.py  distribution.py  missing.py  quality.py
src/f2a/utils/: __init__.py  exceptions.py  logging.py  type_inference.py  validators.py
src/f2a/viz/: __init__.py  corr_plots.py  dist_plots.py  missing_plots.py  plots.py  theme.py
src/stats/: advanced_anomaly.rs  advanced_correlation.rs  advanced_dimreduction.rs  advanced_distribution.rs  categorical.rs  clustering.rs  column_role.rs  correlation.rs  cross_analysis.rs  descriptive.rs  distribution.rs  duplicates.rs  feature_importance.rs  feature_insights.rs  insight_engine.rs  missing.rs  ml_readiness.rs  mod.rs  outlier.rs  pca.rs  quality.rs  statistical_tests.rs
src/utils/: errors.rs  types.rs
tests/: conftest.py  test_analysis.py  test_core.py  test_descriptive.py  test_loader.py  test_report.py  test_viz.py
