[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f2a"
version = "0.1.3"
description = "File to Analysis — Automatically perform descriptive statistical analysis and visualization from any data source"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "CocoRoF" },
]
keywords = ["statistics", "visualization", "data-analysis", "eda", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
    "datasets>=2.14",
    "openpyxl>=3.1",
    "pyarrow>=12.0",
    "pyreadstat>=1.2",
    "tables>=3.8",
    "odfpy>=1.4",
    "lxml>=4.9",
    "duckdb>=0.9",
    "rich>=13.0",
    "jinja2>=3.1",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
advanced = [
    "networkx>=3.0",
    "umap-learn>=0.5",
    "statsmodels>=0.14",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/CocoRoF/f2a"
Documentation = "https://github.com/CocoRoF/f2a#readme"
Repository = "https://github.com/CocoRoF/f2a"
Issues = "https://github.com/CocoRoF/f2a/issues"

[tool.hatch.build.targets.wheel]
packages = ["f2a"]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

# ── Black ─────────────────────────────────────────────
[tool.black]
target-version = ["py310"]
line-length = 100

# ── isort ─────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100

# ── mypy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
