[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "f2a"
version = "1.0.0"
description = "File to Analysis -- Automatically perform statistical analysis from any data source (Rust-powered)"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
authors = [
    { name = "CocoRoF" },
]
keywords = ["statistics", "visualization", "data-analysis", "eda", "rust", "performance"]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
    "pyarrow>=12.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
io = [
    "openpyxl>=3.1",
    "pyreadstat>=1.2",
    "tables>=3.8",
    "odfpy>=1.4",
    "lxml>=4.9",
    "duckdb>=0.9",
    "datasets>=2.14",
]
advanced = [
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "umap-learn>=0.5",
    "statsmodels>=0.14",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "ruff",
    "black",
    "isort",
    "mypy",
    "maturin>=1.7",
]

[project.urls]
Homepage = "https://github.com/CocoRoF/f2a"
Documentation = "https://github.com/CocoRoF/f2a#readme"
Repository = "https://github.com/CocoRoF/f2a"
Issues = "https://github.com/CocoRoF/f2a/issues"

[tool.maturin]
python-source = "python"
module-name = "f2a._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
